[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-rover"
dynamic = ["version"]
dependencies = ["pytest>=6.0"]
requires-python = ">=3.10"
authors = [
    {name="Robert Sullivan", email="robjsullivan@gmail.com"}
]
description = ""
readme = "README.md"

[project.scripts]
rover-cli = "rover.app:run"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]

[tool.black]
[tool.isort]
[tool.mypy]
